samples/_failures_safe/1761544689_4de9f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_98bc2365.c: In function ‘main’:
./samples/SAFE/__tmp_98bc2365.c:162:9: error: expected declaration or statement at end of input
  162 |         printf("Empty input\n");
      |         ^~~~~~
./samples/SAFE/__tmp_98bc2365.c:162:9: error: expected declaration or statement at end of input
